--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,26 @@
   </head>
 
   <body>
-    <%= yield %>
+   <header>
+    <h1>Ruby on Rails スケジュール管理アプリ</h1>
+   </header>
+   <%= yield %>
+   <footer>
+     <h1 id="view_time"></h1>
+
+     <script type="text/javascript">
+       document.getElementById("view_time").innerHTML = getNow();
+
+    function getNow() {
+ 	  var now = new Date();
+ 	  var year = now.getFullYear();
+ 	  var mon = now.getMonth()+1;
+ 	  var day = now.getDate();
+
+ 	  var s = "現在の日時: "+year + "年" + mon + "月" + day + "日";
+ 	  return s;
+    }
+    </script>
+   </footer>
   </body>
 </html>
